<resources>
    <string name="app_name">MyScrumApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="to_do">To-Do</string>
    <string name="in_progress">In-Progress</string>
    <string name="done">Done</string>
    <string name="an_error_occurred_while_loading_data">An error occurred while loading data</string>
    <string name="my_teams">My Teams</string>
    <string name="my_tasks">My Tasks</string>
    <string name="home">Home</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="already_a_user_click_here">Already a User? click here</string>
    <string name="action_login">Login</string>
    <string name="action_logout">LogOut</string>
    <string name="fab_users">Users</string>
    <string name="fab_teams">Teams</string>
    <string name="fab_tasks">Tasks</string>
    <string name="save">Save</string>
    <string name="is_manager">Is Manager?</string>
    <string name="add">Add</string>
    <string name="select_teams">Teams:  </string>
    <string name="select_team">Team:  </string>
    <string name="select_tasks">Tasks:  </string>
    <string name="users">Users:</string>
    <string name="user">User:</string>
    <string name="prompt_team_name">Team Name</string>
    <string name="status">Status</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_title">Title</string>
    <string name="select_existing">Select existing:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="unknown">Status: UNKNOWN</string>
</resources>