<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="user"
            type="com.example.myscrumapp.model.entity.UserRegisterDetails" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.AddUserFragment"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/selectUserSpinnerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="top"
            android:orientation="horizontal"
            android:layout_below="@+id/userBody">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/select_existing"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp"
                android:textStyle="normal" />

            <Spinner
                android:id="@+id/selectUserSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />



        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/userBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/userButtonsLayout"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="-6dp"
            android:orientation="vertical"
            android:padding="50dp">



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:text="@={user.firstName}" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_last_name"
                android:inputType="text"
                android:text="@={user.lastName}" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:text="@={user.email}" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:text="@={user.password}" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/teamsInUserSpinnerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_teams"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:padding="5dp" />

                <com.example.myscrumapp.view.shared.MultiSelectionSpinner
                    android:id="@+id/teamsInUserSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/tasksInUserSpinnerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_tasks"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:padding="5dp" />

                <com.example.myscrumapp.view.shared.MultiSelectionSpinner
                    android:id="@+id/tasksInUserSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.appcompat.widget.LinearLayoutCompat>



            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/is_manager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={user.isManager}"
                android:text="@string/is_manager" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/userButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:padding="@dimen/standard_21"
            android:layout_gravity="bottom"
            android:layout_marginBottom="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_user"
                android:padding="@dimen/standard_21"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/edit_user"
                android:padding="@dimen/standard_21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/edit"
                android:textColor="#FFF"
                app:backgroundTint="#FFC107" />

            <Button
                android:id="@+id/delete_user"
                android:padding="@dimen/standard_21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textColor="#FFF"
                app:backgroundTint="#C80E0E" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <FrameLayout
            android:id="@+id/userLoadingView"
            android:animateLayoutChanges="true"
            android:alpha="0.4"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_gravity="center" />
        </FrameLayout>

    </RelativeLayout>
</layout>