<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="team"
            type="com.example.myscrumapp.model.entity.TeamToCreate" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.AddTeamFragment">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="50dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_team_name"
                android:inputType="text"
                android:text="@={team.name}" />



            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/usersInTeamListSpinnerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/users"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:padding="5dp" />

                <com.example.myscrumapp.view.shared.MultiSelectionSpinner
                    android:id="@+id/usersInTeamListSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/tasksInTeamListSpinnerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_tasks"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:padding="5dp" />

                <com.example.myscrumapp.view.shared.MultiSelectionSpinner
                    android:id="@+id/tasksInTeamListSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.appcompat.widget.LinearLayoutCompat>



            <Button
                android:id="@+id/save_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/add"
                android:textColor="#FFF" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ProgressBar
            android:id="@+id/teamAddedLoadingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />


    </FrameLayout>
</layout>