<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:background="@color/teal_200"
        android:theme="@style/Theme.MyScrumApp.AppBarOverlay">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/teal_700"
            app:popupTheme="@style/Theme.MyScrumApp.PopupOverlay">
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dip"
            android:orientation="horizontal">

            <Button
                android:id="@+id/toDoButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/to_do"
                app:backgroundTint="#606060"
                tools:ignore="ButtonStyle"
                android:clickable="false"/>

            <Button
                android:id="@+id/inProgressButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/in_progress"
                app:backgroundTint="#FFC107"
                tools:ignore="ButtonStyle"
                android:clickable="false"/>

            <Button
                android:id="@+id/doneButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/done"
                app:backgroundTint="#4CAF50"
                tools:ignore="ButtonStyle"
                android:clickable="false"/>
        </LinearLayout>



    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="#009688"
        app:srcCompat="@android:drawable/ic_dialog_email"
        android:contentDescription="TODO" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>